--- a/AIText/AIText.csproj
+++ b/AIText/AIText.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.40.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
+    <PackageReference Include="RestSharp" Version="112.1.0" />
     <PackageReference Include="SqlSugarCore" Version="5.1.4.178" />
   </ItemGroup>
 
