--- a/AIText/AIText.csproj
+++ b/AIText/AIText.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.40.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
+    <PackageReference Include="NPOI" Version="2.5.6" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
     <PackageReference Include="SqlSugarCore" Version="5.1.4.178" />
   </ItemGroup>
