--- a/AIText/AIText.csproj
+++ b/AIText/AIText.csproj
@@ -10,7 +10,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
     <PackageReference Include="NPOI" Version="2.5.6" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
-    <PackageReference Include="SqlSugarCore" Version="5.1.4.178" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Entitys\Entitys.csproj" />
   </ItemGroup>
 
 </Project>
