--- a/QuartzTask/QuartzTask.csproj
+++ b/QuartzTask/QuartzTask.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="TestWorkJob.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="NLog.Config" Version="4.7.15" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.4.0" />
     <PackageReference Include="Quartz" Version="3.14.0" />
