--- a/AIText/NLog.config
+++ b/AIText/NLog.config
@@ -6,9 +6,8 @@
 
   <!-- 配置日志输出目标 -->
   <targets>
-    <!-- 控制台输出 -->
-    <target xsi:type="Console" name="console" layout="${longdate} [${level}] ${message} ${exception:format=ToString}" />
-
+    <!-- 仅在开发环境下启用 Debugger 输出 -->
+    <logger name="*" minlevel="Debug" writeTo="debugger" condition="level >= LogLevel.Debug and '${environment:ASPNETCORE_ENVIRONMENT}' == 'Development'" />
     <!-- 文件输出 -->
     <target xsi:type="File" name="file" fileName="logs/${shortdate}.log"
             layout="${longdate} [${level}] ${message} ${exception:format=ToString}"
@@ -17,7 +16,6 @@
 
   <!-- 配置日志记录规则 -->
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="console" />
     <logger name="*" minlevel="Debug" writeTo="file" />
   </rules>
 
